# Supeprnoba-Core

./: .gitignore  AUTO_DEPLOY_GUIDE.md  AWS_ARCHITECTURE.md  AWS_CONSOLE_SETUP_GUIDE.md  CI_CD_SETUP.md  DEPLOYMENT_GUIDE.md  ENGINE_EVENTS.md  README.md  README_ORDER_ENTRY.md  admin_config.json  create_test_user.cjs  deploy-all-lambdas.ps1  generate_architecture.py  package-lock.json  streams.json
.github/workflows/: deploy-engine.yml  deploy-lambda.yml  test-workflow.yml
.obsidian/: workspace.json
aggregator/: CMakeLists.txt  README.md  run_aggregator.sh  vcpkg.json
aggregator/include/: aggregator.h  config.h  dynamodb_client.h  logger.h  rds_client.h  s3_client.h  valkey_client.h
aggregator/src/: aggregator.cpp  config.cpp  dynamodb_client.cpp  logger.cpp  main.cpp  rds_client.cpp  s3_client.cpp  valkey_client.cpp
docs/: CANDLE_ARCHITECTURE.md  CLIENT_DATA_FLOW.md  CODE_ANALYSIS_REPORT.md  Frontend_websocket.js  TECHNICAL_HANDOVER.md  results.csv
lambda/: README.md  clean-artifacts.ps1  deploy-all-lambdas.ps1  layer.txt
lambda/AWSSupernoba-admin/: index.mjs
lambda/AWSSupernoba-order-router/: index.mjs
lambda/AWSconnect-handler/: index.mjs
lambda/AWSdepth-stream-public/: index.mjs
lambda/AWSdisconnect-handler/: index.mjs
lambda/AWSsubscribe-handler/: index.mjs
lambda/AWSuser-stream-handler/: index.mjs
lambda/Supernoba-admin/: deploy.mjs  env.json  index.mjs  package-lock.json  package.json
lambda/Supernoba-asset-handler/: index.mjs  (+3 more)
test/: .gitignore
wrapper/: CMakeLists.txt  README.md  build_ec2.sh  run_engine.sh  vcpkg.json
(+55 files in other folders)
